#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-18
2014-02-07 Mikhail S. Dubrovin
- cosmetic edition for doxygen documentation
	
Tag: V00-01-17
2014-02-06 Mikhail S. Dubrovin
- in CalibPars.h get all calibration types from pdscalibdata::Pnccd*V1::pars_t

Tag: V00-01-16
2014-02-05 Mikhail S. Dubrovin
- add superclass CalibPars.h
- now PnccdCalibPars is derived from class CalibPars
- add static factory CalibParsStore.h
	
Tag: V00-01-15
2014-01-29 Mikhail S. Dubrovin
- add new class for pnCCD with example: PnccdCalibPars, test/ex_pnccd_calib_pars.cpp
- in CalibFileFinder add parameter print_bits to control verbosity
	
Tag: V00-01-14
2013-12-18 Andy
- forgot to add unit test to svn

Tag: V00-01-13
2013-12-17 Andy
- CalibFileFinder: bug fix for ordering of the intervals with common start
- adding unit test for CalibFileFinder

Tag: V00-01-12
2013-09-17 Mikhail S. Dubrovin
- improve doxigen documentation, add description of interfaces in CSPadCalibPars and CSPad2x2CalibPars
- improve test modules test/ex_cspad_calib_pars.cpp and test/ex_cspad2x2_calib_pars.cpp
- add methods for mapping of the calibration type status

Tag: V00-01-11
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-01-10
2013-08-30 Mikhail S. Dubrovin
- in ex_cspad2x2_calib_pars.cpp and src/CSPad2x2CalibPars.cpp switch to /tutXXX directory for examples

Tag: V00-01-09
2013-06-07 Mikhail S. Dubrovin
- improve interface for CSPadCalibPars and CSPad2x2CalibPars constructor
	
Tag: V00-01-08
2013-04-03 Mikhail S. Dubrovin
- add two new calib types for center_global and rotation_global
	
Tag: V00-01-07